--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     <link rel="alternate" hreflang="en" href="https://financecalc.cc/">
     <link rel="alternate" hreflang="x-default" href="https://financecalc.cc/">
 
+    <!-- Performance: DNS prefetch for third parties -->
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+    <link rel="dns-prefetch" href="https://pagead2.googlesyndication.com">
+    <link rel="dns-prefetch" href="https://www.googletagmanager.com">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -474,6 +479,7 @@
     <script src="js/i18n.js"></script>
     <!-- SEO Enhancement -->
     <script src="js/seo.js" defer></script>
+    <script src="js/performance.js" defer></script>
     <!-- Payhip Payment - disabled until traffic grows
     <script src="js/payhip.js" defer></script>
     -->
